ui page fixed spacing on mobile

--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -175,6 +175,15 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2b85bc', end
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#273238', endColorstr='#3883be',GradientType=0 ) !important; /* IE6-9 */
 }
 
+.uiBack{
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#273238+0,939393+79&1+0,0+100 */
+  background: -moz-linear-gradient(top, rgba(39,50,56,1) 0%, rgba(147,147,147,0.21) 79%, rgba(147,147,147,0) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgba(39,50,56,1) 0%,rgba(147,147,147,0.21) 79%,rgba(147,147,147,0) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(39,50,56,1) 0%,rgba(147,147,147,0.21) 79%,rgba(147,147,147,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#273238', endColorstr='#00939393',GradientType=0 ); /* IE6-9 */
+}
+
+
 .whiteTransBack{
   background-color: rgba(255,255,255,.8);
 }
